Changelog
---------
2.0.2
- CHANGE: Ported to Minecraft version 1.16.5
- ADDED:  Dynamic Texture Recipes
- FIXED:  Various bugs with the Dynamic Camera module

2.0.1
- FIXED: Capability NPE in case CapabilityImplementations are instantiated before Capability has been injected
- FIXED: Inventory bugs
- FIXED: BakedQuad tessellation
- ADDED: EnumHelper
- ADDED: Dynamic Camera Module
- ADDED: More rendering utility Methods
- ADDED: Automatically synced fields to TileEntities

2.0.0
- CHANGE: ported to 1.16.4

1.12.0
- PORTED  : Ported to Minecraft version 1.12.
- FIXED   : Fixed memory churn associated with item models rendered using InfinityLib's rendering pipeline.
- TWEAK   : Cleaned up rendering pipeline in the hopes of improving overall performance and extensibility.
- TWEAK   : Improved MessageUtil so that it is easier to send colored messages.
- FIXED   : ItemBlock registration method, so that blocks with items now actually work in 1.12.
- FIXED   : Items that were automatically rendered using InfinityLib now actually render once again.
- REMOVED : Methods deprecated in an earlier release.
- UPGRADED: ReflectionHelper class.

0.14.0
- CHANGE: UNKNOWN.

0.13.0
- CHANGE: ported to 1.12.1

0.12.1
- FIXED: Debugger being broken

0.12.0
- TWEAK: Better dual wielded attacking
- ADDED: Translation helper (wrapper should help making porting mc versions easier)
- ADDED: Registering of sounds
- FIXED: Container duplication bug

0.11.0
- CHANGE: Backfixed some overzealous changes with regard to agricraft which broke the other mods

0.10.0
- TWEAK: Change quad format used by dynamic renderers.
- TWEAK: Upgrade InfinityProperty blockstate return types.
- FIXED: Block rendering mixup due to hashing collision with cached quads. Now the render system works as well as it should.
- TWEAK: Changed the way that IItemWithRecipe works, as to make it more generic and useful.

0.9.0